--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,7 +155,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/Theme.AppCompat.Full"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".simple.HPActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/Theme.AppCompat.Full"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".simple.SimpleDetailActivityMode1"
             android:configChanges="orientation|keyboardHidden|screenSize"
